# CreatumLibre

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  creatumlibre.html  index.html  pyproject.toml  requirements.txt  search.js
.github/workflows/: ci.yml  update-wiki.yml
creatumlibre/: graphics.html  main.html  ui.html
creatumlibre/graphics/: boolean_operations.html  filters.html  selection.html
creatumlibre/graphics/boolean_operations/: image_boolean.html
creatumlibre/graphics/filters/: enhancers.html
creatumlibre/graphics/selection/: region_manager.html  selection.html
creatumlibre/ui/: dialogs.html  input.html  left_sidebar.html  manager.html  menu.html  mode.html  root_ui.html
creatumlibre/ui/dialogs/: color_adjustment_dialog.html  color_adjustment_dialog_css.html  dialog_manager.html  object_manager_dialog.html
creatumlibre/ui/input/: input_handler.html  intersection_state.html
creatumlibre/ui/left_sidebar/: left_sidebar.html  left_sidebar_css.html
creatumlibre/ui/manager/: image_handler.html  object_manager.html  tab_manager.html
creatumlibre/ui/menu/: files.html  zoom.html
creatumlibre/ui/mode/: ui_input_mode.html
docs/: creatumlibre.html  index.html  search.js
docs/creatumlibre/: main.html
scripts/: generate_index.py
src/: main.py  main_start.py
src/creatumlibre/: main.py
src/creatumlibre/graphics/boolean_operations/: image_boolean.py
src/creatumlibre/graphics/math/: vector2d.py
src/creatumlibre/graphics/selection/: region_manager.py  selection.py
src/creatumlibre/ui/: base.py  root_ui.py
src/creatumlibre/ui/dialogs/: color_adjustment_dialog.py  dialog_manager.py  object_manager_dialog.py
src/creatumlibre/ui/input/: input_handler.py  intersection_state.py
src/creatumlibre/ui/left_sidebar/: left_sidebar.py
src/creatumlibre/ui/manager/: image_handler.py  object_manager.py  tab_manager.py
src/creatumlibre/ui/menu/: files.py  zoom.py
src/creatumlibre/ui/mode/: ui_input_mode.py
src/graphics/: selection.py
src/graphics/boolean_operations/: image_boolean.py
src/graphics/filters/: enhancers.py
src/graphics/picture/: brightness.py  color_adjustments.py  utils.py
src/graphics/selection/: region_manager.py  selection.py
src/language/: language_handler.py  translations.json
src/ui/: base.py  layout.py  left_sidebar.py  ui.py
src/ui/dialogs/: __init__.py  color_adjustment_dialog.py  color_adjustment_dialog_css.py  color_dialog.py
src/ui/input/: input_handler.py
src/ui/left_sidebar/: left_sidebar.py  left_sidebar_css.py
src/ui/manager/: image_handler.py  image_manager.py  object_manager.py  tab_manager.py
src/ui/menu/: zoom.py
src/ui/mode/: ui_input_mode.py
src/ui/ui_menus/: files.py  zoom.py
src/ui/ui_structure/: frame_data.py  image_data.py  notebook_data.py
templates/: index_template.html
test/graphics/boolean_operations/: test_merge.py
test/ui/manager/: test_object_manager.py
test/ui/ui_menus/: test_zoom.py
