[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "com.creatumlibre.www"
version = "0.1.0"
description = "Ein kreatives Grafik-Projekt mit Python"
authors = [{name = "Martin Stottmeister", email = "marty@umbrella-brothers.de"}]
dependencies = [
    "opencv-python",  # Bildverarbeitung
    "cairocffi",      # Cairo-Bindings für Grafik
    "pillow",         # Rastergrafik-Handling
    "numpy",          # Mathematische Operationen
    "pycairo",        # Alternative Cairo-Bindings
    "matplotlib",     # Plots & Visualisierung
    "scipy",          # Wissenschaftliche Berechnungen
    "wand",           # ImageMagick-Integration
    "pytest",          # Test-Framework hinzufügen
    "pytest-cov",
    "pytest-mock",
    "PyQt6",
    "pdoc",
    "jinja2"
]
requires-python = ">=3.13"

[tool.setuptools.packages.find]
where = ["src"]
include = ["creatumlibre"]
exclude =["test*"]

[tool.pylint.typecheck]
generated-members = "cv2.*"

[tool.isort]
profile = "black"

[project.scripts]
creatumlibre = "creatumlibre.main:main"
